--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "alexusmai/laravel-file-manager": "^3.0",
         "biscolab/laravel-recaptcha": "^5.3",
         "dcblogdev/laravel-module-generator": "^1.0",
+        "doctrine/dbal": "^3.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
