--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.0.2",
         "alexusmai/laravel-file-manager": "^3.0",
+        "barryvdh/laravel-dompdf": "^2.0",
         "biscolab/laravel-recaptcha": "^5.3",
         "dcblogdev/laravel-module-generator": "^1.0",
         "doctrine/dbal": "^3.5",
