--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/ui": "^3.4",
         "nwidart/laravel-modules": "^9.0",
         "realrashid/sweet-alert": "^5.0",
+        "riskihajar/terbilang": "^1.2",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
