--- a/composer.json
+++ b/composer.json
@@ -6,22 +6,19 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
-        "afrizalmy/laraindo": "^1.0",
         "alexusmai/laravel-file-manager": "^3.0",
         "barryvdh/laravel-dompdf": "^2.2",
-        "biscolab/laravel-recaptcha": "^5.3",
-        "dcblogdev/laravel-module-generator": "^1.0",
         "doctrine/dbal": "^3.5",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^9.2",
-        "laravel/sanctum": "^2.14.1",
+        "realrashid/sweet-alert": "^7.0",
+        "laravel/framework": "^11.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.7",
-        "laravel/ui": "^3.4",
+        "laravel/ui": "^4.0",
         "maatwebsite/excel": "^3.1",
         "nwidart/laravel-modules": "^9.0",
-        "realrashid/sweet-alert": "^5.0",
         "riskihajar/terbilang": "^2.0",
-        "spatie/laravel-permission": "^5.5"
+        "spatie/laravel-permission": "^6.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
@@ -29,9 +26,9 @@
         "laravel-lang/lang": "^10.4",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "nunomaduro/collision": "^8.1",
+        "phpunit/phpunit": "^11.0",
+        "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -71,6 +68,6 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
